--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,6 +31,9 @@
                 android:textAlignment="textStart"
                 android:textColor="@color/black"
                 android:textSize="30sp"
+
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.133"
@@ -45,6 +48,9 @@
                 android:layout_marginTop="14dp"
                 android:text="@string/sign_in_to_continue"
                 android:textAlignment="textStart"
+
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +65,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
                 app:counterEnabled="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +94,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 app:counterEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
