--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -24,10 +24,12 @@
 
             <TextView
                 android:id="@+id/textView3d21"
-                android:layout_width="193dp"
+                android:layout_width="220dp"
                 android:layout_height="42dp"
                 android:layout_marginTop="36dp"
-                android:text="@string/create_account"
+                android:text="Create Account,"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textAlignment="textStart"
                 android:textColor="@color/black"
                 android:textSize="30sp"
@@ -43,6 +45,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
                 android:layout_marginTop="14dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:text="@string/sign_up_to_get_started"
                 android:textAlignment="textStart"
                 android:textSize="20sp"
@@ -58,6 +62,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 app:counterEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -84,6 +90,8 @@
                 android:id="@+id/Name_id_ed"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_height="wrap_content"
                 app:counterEnabled="true"
                 android:layout_marginTop="20dp"
@@ -115,6 +123,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 app:counterEnabled="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -144,13 +154,13 @@
                 android:layout_height="54dp"
                 android:layout_marginTop="20dp"
                 android:backgroundTint="@color/cus"
-                android:text="@string/login"
+                android:text="@string/sign_up"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 android:textStyle="bold"
-                app:icon="@drawable/ic_baseline_login_24"
+                app:icon="@drawable/ic_baseline_person_add_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
