--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -167,6 +167,19 @@
                 app:layout_constraintTop_toBottomOf="@+id/Pass_id_ed"
                 app:layout_constraintVertical_bias="0.164" />
 
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="103dp"
+                android:layout_height="84dp"
+                android:layout_marginTop="46dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="124dp"
+                android:src="@drawable/networking__1_"
+                app:layout_constraintBottom_toTopOf="@+id/Name_id_ed"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
