--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="cus">#FF7A37</color>
+    <color name="cus">#69F0AE</color>
+    <color name="des">#c6f68d</color>
+    <color name="des2">#defabb</color>
+    <color name="surface">#121212</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
