--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -58,13 +58,14 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/UserName_id_ed"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxBackgroundColor="@color/white"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:counterEnabled="true"
+                android:hint="@string/full_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -75,11 +76,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="22dp"
+                    android:textColorHighlight="@color/des2"
                     android:layout_marginEnd="22dp"
                     android:drawableStart="@drawable/ic_baseline_perm_identity_24"
                     android:drawablePadding="10dp"
                     android:ems="10"
-                    android:hint="@string/full_name"
                     android:inputType="textPersonName"
                     android:textColorHint="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
@@ -88,12 +89,13 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/Name_id_ed"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxBackgroundColor="@color/white"
                 android:layout_width="0dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_height="wrap_content"
                 app:counterEnabled="true"
+                android:hint="@string/email_id"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -109,8 +111,7 @@
                     android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                     android:drawablePadding="10dp"
                     android:ems="10"
-                    android:hint="@string/email_id"
-                    android:inputType="textPersonName"
+                    android:inputType="textEmailAddress"
                     android:textColorHint="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:layout_editor_absoluteY="300dp" />
@@ -118,15 +119,15 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/Pass_id_ed"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
+                android:hint="@string/password"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 app:counterEnabled="true"
+                app:boxBackgroundColor="@color/white"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/Name_id_ed"
                 app:passwordToggleEnabled="true">
@@ -139,8 +140,6 @@
                     android:layout_marginEnd="22dp"
                     android:drawableStart="@drawable/ic_baseline_security_24"
                     android:drawablePadding="10dp"
-                    android:ems="10"
-                    android:hint="@string/password"
                     android:inputType="textPassword"
                     android:textColorHint="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
@@ -156,6 +155,7 @@
                 android:backgroundTint="@color/cus"
                 android:text="@string/sign_up"
                 android:textAlignment="center"
+                android:imeOptions="actionSend|actionSearch|actionDone"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="17sp"
@@ -165,7 +165,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/Pass_id_ed"
-                app:layout_constraintVertical_bias="0.164" />
+                app:layout_constraintVertical_bias="0.164"
+                tools:ignore="TextViewEdits" />
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -180,8 +181,20 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/registerProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="97dp"
+        android:layout_height="85dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/switchBet"
